--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
+    "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
