Added React-Router paths, and placeholder components for 'Songs', 'Artists' and 'Albums'. Also added buttons to 'NavigationBar' component to have access to the 'songs', 'artists' and 'albums' views via routing. For routing we use the React-Router History, and therefore one cannot access a path such as '/songs' directly from the browser: one needs to access the root view, and then click on the 'Songs' button to access the Songs view.

--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
   },
   "dependencies": {
     "babel": "^6.3.26",
+    "history": "^1.17.0",
     "immutable": "^3.7.6",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.4",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.2",
     "spotify-web-api-js": "^0.15.0"
