--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "http-server -p 3000 dist",
     "start": "webpack-dev-server --progress --colors --hot",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx) src/**/*.js'",
+    "coverage": "node_modules/.bin/babel-node node_modules/isparta/bin/isparta cover --report html node_modules/mocha/bin/_mocha -- --reporter dot --require ./test/test_helper.js 'test/**/*.js'"
   },
   "keywords": [
     "react",
@@ -17,6 +18,7 @@
   "author": "Nick M. Jaremek <nick13jaremek@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.4.0",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
@@ -24,6 +26,8 @@
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.2",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
