Fixed 'test' npm command. Added tests for 'ArtistCard' component. Added empty test files for the remaining items: 'AlbumCard', 'ArtistAlbum', 'ArtistMainDetails', 'ArtistView', 'ArtistAlbumReducer', 'ArtistDetailReducer'. Renamed 'artists' reducer to 'ArtistsReducer'.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "http-server -p 3000 dist",
     "start": "webpack-dev-server --progress --colors --hot",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx) src/**/*.js'",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "coverage": "node_modules/.bin/babel-node node_modules/isparta/bin/isparta cover --report html node_modules/mocha/bin/_mocha -- --reporter dot --require ./test/test_helper.js 'test/**/*.js'"
   },
   "keywords": [
