--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "react-shallow-testutils": "^0.7.1",
     "redux-mock-store": "0.0.6",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
