--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "istanbul": "^0.4.2",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
+    "nock": "^5.2.1",
     "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
